--- a/app/src/main/res/layout/activity_home_coach.xml
+++ b/app/src/main/res/layout/activity_home_coach.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.HomeCoach">
+    tools:context=".Activities.HomeCouch">
 
     <Button
         android:id="@+id/btnLogOutCoach"
@@ -16,5 +16,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.52" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
