--- a/app/src/main/res/layout/activity_home_coach.xml
+++ b/app/src/main/res/layout/activity_home_coach.xml
@@ -7,10 +7,10 @@
     tools:context=".Activities.HomeCoach">
 
     <Button
-        android:id="@+id/btnLogOutCoach"
+        android:id="@+id/btnCoachAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/log_out_coach"
+        android:text="My Account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.057"
@@ -30,6 +30,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.13"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnLogOutCoach"
+        app:layout_constraintTop_toBottomOf="@+id/btnCoachAccount"
         app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
