--- a/app/src/main/res/layout/activity_home_trainee.xml
+++ b/app/src/main/res/layout/activity_home_trainee.xml
@@ -7,15 +7,31 @@
     tools:context=".Activities.HomeTrainee">
 
     <Button
-        android:id="@+id/btnLogOutTrainee"
+        android:id="@+id/btnTraineeAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LOG OUT TRAINEE"
+        android:text="My Account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.057"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.52" />
+        app:layout_constraintVertical_bias="0.023" />
+
+    <Button
+        android:id="@+id/btnChooseWorkout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:text="Choose Workout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnTraineeAccount"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 
