--- a/app/src/main/res/layout/activity_trainee_home.xml
+++ b/app/src/main/res/layout/activity_trainee_home.xml
@@ -2,24 +2,24 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coach_drawer_layout"
+    android:id="@+id/trainee_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
     <include
-        layout="@layout/app_bar_coach_home"
+        layout="@layout/app_bar_trainee_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/coach_nav_view"
+        android:id="@+id/trainee_nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_coach_home"
-        app:menu="@menu/activity_coach_home_drawer" />
+        app:headerLayout="@layout/nav_header_trainee_home"
+        app:menu="@menu/activity_trainee_home_drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
