--- a/app/src/main/res/layout/fragment_trainee_profile.xml
+++ b/app/src/main/res/layout/fragment_trainee_profile.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/text_my_workouts"
+        android:id="@+id/text_trainee_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
