--- a/app/src/main/res/layout/nav_header_trainee_home.xml
+++ b/app/src/main/res/layout/nav_header_trainee_home.xml
@@ -13,7 +13,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/coach_imageView"
+        android:id="@+id/trainee_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
