--- a/app/src/main/res/layout/fragment_coach_new_workout.xml
+++ b/app/src/main/res/layout/fragment_coach_new_workout.xml
@@ -47,7 +47,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/btnDate"
+        app:layout_constraintStart_toEndOf="@id/btnDate"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.0" />
 
