--- a/app/src/main/res/navigation/coach_mobile_navigation.xml
+++ b/app/src/main/res/navigation/coach_mobile_navigation.xml
@@ -2,31 +2,31 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coach_mobile_navigation"
+    android:id="@+id/mobile_navigation"
     app:startDestination="@+id/nav_coach_my_workouts">
 
     <fragment
         android:id="@+id/nav_coach_my_workouts"
-        android:name="com.example.boostit.UICoach.myworkouts.MyWorkoutsFragment"
-        android:label="@string/menu_my_workouts"
+        android:name="com.example.boostit.ui.coach_my_workouts.CoachMyWorkoutsFragment"
+        android:label="@string/menu_coach_my_workouts"
         tools:layout="@layout/fragment_coach_my_workouts" />
 
     <fragment
-        android:id="@+id/nav_coach_choose_workout"
-        android:name="com.example.boostit.UICoach.new_workout.NewWorkoutFragment"
-        android:label="@string/menu_new_workouot"
+        android:id="@+id/nav_coach_new_workout"
+        android:name="com.example.boostit.ui.coach_new_workout.CoachNewWorkoutFragment"
+        android:label="@string/menu_coach_new_workout"
         tools:layout="@layout/fragment_coach_new_workout" />
 
     <fragment
-        android:id="@+id/nav_coach_workouts_history"
-        android:name="com.example.boostit.UICoach.workouts_history.WorkoutsHistoryFragment"
-        android:label="@string/menu_workouts_history"
-        tools:layout="@layout/fragment_coach_workouts_history" />
+        android:id="@+id/nav_coach_workout_history"
+        android:name="com.example.boostit.ui.coach_workout_history.CoachWorkoutHistoryFragment"
+        android:label="@string/menu_coach_workout_history"
+        tools:layout="@layout/fragment_coach_workout_history" />
 
     <fragment
         android:id="@+id/nav_coach_profile"
-        android:name="com.example.boostit.UICoach.profile.ProfileFragment"
-        android:label="@string/menu_profile"
+        android:name="com.example.boostit.ui.coach_profile.CoachProfileFragment"
+        android:label="@string/menu_tools"
         tools:layout="@layout/fragment_coach_profile" />
 
 </navigation>
